unpackaged/main/default/objects/bombora_data__LogEvent__e/fields/bombora_data__ClassName__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__ClassName__c</fullName>
    <description>Class Name attribute to this action</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>