unpackaged/main/default/objects/bombora_data__LogEvent__e/fields/bombora_data__Message__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Message__c</fullName>
    <description>Message for this action</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>