unpackaged/main/default/objects/bombora_data__LogEvent__e/fields/bombora_data__ObjectIDs__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__ObjectIDs__c</fullName>
    <description>Comma delimited list of Object ID&#39;s affected by this action</description>
    <label>Object IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>